simple update to solve weird scrolling on mobile, when browser shows toolbar underneeth

--- a/src/app/core/layouts/home-layout/components/banner/banner.component.scss
+++ b/src/app/core/layouts/home-layout/components/banner/banner.component.scss
@@ -5,7 +5,7 @@
 
     width: 100%;
     // height: 840px;
-    height: 100dvh;
+    height: 100vh;
     background-image: url('/assets/img/bg.webp');
     background-size: cover;
     background-position: center;
